# django-smart-cache

./: pyproject.toml
src/django_smart_cache/: cache.py  views.py
src/tests/: test_cache.py
